--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simply-carousel": "^9.0.4",
+    "react-slick": "^0.29.0",
     "tailwindcss": "^3.3.3"
   }
 }
