--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-reveal": "^1.2.2",
     "react-simply-carousel": "^9.0.4",
     "react-slick": "^0.29.0",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.3.3"
   }
 }
