--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +18,7 @@
     "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
     "react-simply-carousel": "^9.0.4",
     "react-slick": "^0.29.0",
     "sharp": "^0.32.6",
